# fsm2cg

./: README.md  fsm2cg.cabal
app/: Main.hs
src/: Lib.hs
test/: a*bc*.fsm
