name:                fsm2cg
version:             0.1.0.0
synopsis:            Small executable which reads finite state machines and produces CG3 code.
description:         Please see README.md
homepage:            https://github.com/wenkokke/fsm2cg#readme
license:             MIT
license-file:        LICENSE
author:              Wen Kokke
maintainer:          wen.kokke@gmail.com
copyright:           (c) 2016 wen Kokke
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable fsm2cg
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fsm2cg
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wenkokke/fsm2cg
